--- a/style.css
+++ b/style.css
@@ -243,22 +243,33 @@ add to this if you add any card to the markup */
 }
 .card .card-item {
     width: 50%;
-    height: 45vh;
+    height: 42vh;
 }
 .card:first-child {
     margin-top: 20vh;
 }
 .card-item:first-child {
-    padding: 45px 80px 0 90px;
+    padding: 75px 80px 0 90px;
+    font-size: 15px;
+}
+.card h1 {
+    font-size: 1.5rem;
+}
+.card-item::nth-child(2) p,
+.card-item::nth-child(4) p,
+.card-item::nth-child(6) p,
+.card-item::nth-child(8) p {
+    padding: 75px 90px 0 80px;
 }
 .card-item:first-child p {
     color: hsl(208, 11%, 55%);
+    padding-top: 10px;
 }
 /* .card-item:l */
 .card-item:last-child img {
-    width: 50%;
+    width: 20vw;
     margin-left: calc(50% / 2);
-    margin-top: calc(25% / 2);
+    margin-top: 6vh;
     /* height: 60vh; */
 }
 
@@ -329,12 +340,12 @@ add to this if you add any card to the markup */
     }
 
     .card-item:first-child {
-        padding: 0 50px 20px 50px;
+        padding: 0 30px 20px 30px;
         text-align: center;
     }
 
     .card-item:first-child h1 {
-        font-size: 1.5em;
+        font-size: 1.2em;
     }
 
     .card-item:first-child p {
