--- a/style.css
+++ b/style.css
@@ -90,9 +90,12 @@ nav  >  ul a {
     padding-left: 30px;
 }
 
-
 /* ipad Air Screen */
-@media (max-width: 820px) {
+@media (max-width: 912px) {
+    header {
+        width: 100vw;
+        height: 75vh;
+    }
     .header-text {
         width: 45%;
     }
@@ -101,7 +104,7 @@ nav  >  ul a {
     }
     .header-text {
         margin-top: 160px;
-        padding: 0 20px 0 20px;
+        padding: 0 20px 0 60px;
     }
     .header-text h1 {
         /* line-height: 35px; */
@@ -124,17 +127,18 @@ nav  >  ul a {
         height: 130vh;
     }
 
+    /* logo */
     nav >img {
             width: 100px;
-            margin: 55px 0 0 30px;
+            margin: 55px 0 0 25px;
     }
     
     nav>ul {
-        margin: 55px 30px 0 0;
+        margin: 55px 25px 0 0;
     }
     
     nav>ul a {
-        padding: 10px 30px;
+        padding: 8px 25px;
         border-radius: 20px;
     }
 
@@ -175,6 +179,27 @@ nav  >  ul a {
 }
 
 @media (max-width: 375px) {
+
+    header {
+            width: 100vw;
+            height: 135vh;
+        }
+
+    /* logo */
+        nav>img {
+            width: 90px;
+            margin: 55px 0 0 20px;
+        }
+    
+        nav>ul {
+            margin: 55px 20px 0 0;
+        }
+    
+        nav>ul a {
+            padding: 8px 15px;
+            border-radius: 20px;
+        }
+
     .header-text {
         padding: 0;
         padding-left: 40px;
@@ -212,7 +237,7 @@ main {
     width: 100vw;
 
     /* 1st card margin top + card height + card margin top * 4 */
-    height: calc((20vh + (45vh / 2) + 10vh) * 4);
+    height: calc((20vh + (45vh / 2) + 10vh) * 3.8);
 }
 footer {
     width: 100vw;
@@ -225,7 +250,7 @@ footer {
     flex-direction: row;
     width: 75vw;
     margin-left: calc(50vw - (75vw / 2));
-    margin-top: 6vh;
+    margin-top: 9vh;
     border-radius: 10px;
     background-color: #ffffff;
     box-shadow: 0 4px 8px 0#1817170a, 0 8px 20px 0 #25252513;
@@ -249,17 +274,17 @@ add to this if you add any card to the markup */
     margin-top: 20vh;
 }
 .card-item:first-child {
-    padding: 75px 80px 0 90px;
+    padding: 60px 80px 0 50px;
     font-size: 15px;
 }
 .card h1 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 .card-item::nth-child(2) p,
 .card-item::nth-child(4) p,
 .card-item::nth-child(6) p,
 .card-item::nth-child(8) p {
-    padding: 75px 90px 0 80px;
+    padding: 60px 80px 0 50px;
 }
 .card-item:first-child p {
     color: hsl(208, 11%, 55%);
@@ -269,16 +294,28 @@ add to this if you add any card to the markup */
 .card-item:last-child img {
     width: 20vw;
     margin-left: calc(50% / 2);
-    margin-top: 6vh;
+    margin-top: 3.5vh;
     /* height: 60vh; */
 }
+@media (max-width: 912px) {
+    .card .card-item {
+        width: 50%;
+        height: 25vh;
+    }
 
+    main {
+            width: 100vw;
+    
+            /* 1st card margin top + card height + card margin top * 4 */
+            height: calc((20vh + 45vh + 10vh) * 1.8);
+        } 
+}
 @media (max-width: 540px) {
     main {
             width: 100vw;
     
             /* 1st card margin top + card height + card margin top * 4 */
-            height: calc((20vh + 45vh + 10vh) * 4);
+            height: calc((20vh + 45vh + 10vh) * 3.5);
         }
 
     .card {
@@ -286,7 +323,6 @@ add to this if you add any card to the markup */
         flex-direction: column-reverse !important;
         width: 75vw;
         margin-left: calc(50vw - (75vw / 2));
-        margin-top: 6vh;
         border-radius: 10px;
         background-color: #ffffff;
         box-shadow: 0 4px 8px 0#1817170a, 0 8px 20px 0 #25252513;
@@ -295,12 +331,9 @@ add to this if you add any card to the markup */
     width: 100%;
     height: 30vh;
 }
-.card {
-    margin-top: 20vh;
-    flex-direction: column-reverse;
-}
+
 .card-item:first-child {
-    padding: 10% 50px 10px 50px;
+    padding: 40px 50px 10px 50px;
     text-align: center;
 }
 .card-item:first-child h1 {
@@ -313,17 +346,30 @@ add to this if you add any card to the markup */
 .card-item:last-child img {
     width: 60%;
     margin-left: calc(45% / 2);
-    margin-top: calc(20% / 2);
+    margin-top: 5vh;
 }
 }
 
+@media (max-width: 414px) {
+    .card-item:first-child {
+        padding: 0 50px 10px 50px;
+    }
+}
+
 @media (max-width: 375px) {
+    main {
+            width: 100vw;
+    
+            /* 1st card margin top + card height + card margin top * 4 */
+            height: calc((20vh + 70vh + 5vh) * 3);
+        }
+
     .card {
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         width: 75vw;
         margin-left: calc(50vw - (75vw / 2));
-        margin-top: 6vh;
+        /* margin-top: 1vh; */
         border-radius: 10px;
         background-color: #ffffff;
         box-shadow: 0 4px 8px 0#1817170a, 0 8px 20px 0 #25252513;
@@ -334,18 +380,13 @@ add to this if you add any card to the markup */
         height: 35vh;
     }
 
-    .card {
-        margin-top: 20vh;
-        flex-direction: column-reverse;
-    }
-
     .card-item:first-child {
-        padding: 0 30px 20px 30px;
+        padding: 0 16px 20px 16px;
         text-align: center;
     }
 
     .card-item:first-child h1 {
-        font-size: 1.2em;
+        font-size: 1.1em;
     }
 
     .card-item:first-child p {
@@ -356,7 +397,6 @@ add to this if you add any card to the markup */
     .card-item:last-child img {
         width: 60%;
         margin-left: calc(40% / 2);
-        margin-top: calc(30% / 2);
-        /* height: 60vh; */
+        margin-top: 8vh;
     }
 }
