--- a/style.css
+++ b/style.css
@@ -546,10 +546,11 @@ section[class="call-to-act-sec"] {
 
 footer {
     width: 100vw;
-    height: 60vh;
+    height: 650px;
     background-color: hsl(192, 100%, 9%);
     display: flex;
     color: #ffffff;
+    padding: 100px;
 }
 footer a{
     color: #ffffff;
@@ -593,9 +594,9 @@ footer > .ft-social i {
     font-weight: lighter;
     border: 1px solid #ffffff;
     border-radius: 50%;
-    padding: 10px 12px;
-    padding-left: 5px;
+    padding: 8px 8px;
+    margin-left: 5px;
 }
-footer>.ft-social i:first-child {
-    padding: 10px 12px;
+footer>.ft-social div:first-child i {
+    padding: 8px 10px;
 }
