--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ footer a{
 footer > .ft-intro,
 footer > .ft-social {
     width: 35%;
-    margin-top: 150px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -571,24 +571,19 @@ footer>.ft-link-2 {
     flex-direction: column;
 }
 
+footer > .ft-intro img {
+    background-color: #ffffff;
+}
+footer > .ft-intro div > img {
+    height: 20px;
+
+}
 footer>.ft-social {
     display: flex;
     flex-direction: row;
+    margin-top: 150px;
 }
-footer > .ft-social div {
-    text-align:center;
-	width:0px;
-	height:0px;
-	padding:20px;
-	border-top-right-radius: 	20px;
-	border-top-left-radius: 	20px;
-	border-bottom-right-radius: 20px;
-	border-bottom-left-radius: 	20px; 
-	-moz-border-radius: 		20px 20px 20px 20px;
-	-webkit-border-radius: 		20px 20px 20px 20px;
-	-khtml-border-radius: 		20px 20px 20px 20px; 	
-	color:#FFFFFF;
-}
+
 footer > .ft-social i {
     font-size: 10px;
     font-weight: lighter;
