--- a/style.css
+++ b/style.css
@@ -314,7 +314,7 @@ add to this if you add any card to the markup */
             width: 100%;
     
             /* 1st card margin top + card height + card margin top * 4 */
-            height: calc(870px + (300px) * 3)
+            height: calc(1000px + (350px) * 4)
         }
 
     .card {
@@ -444,7 +444,7 @@ section[class="call-to-act-sec"] {
             left: calc(50% - (57% / 2));
     
             /* negative height of the main section and some adustment */
-            bottom: -116vh;
+            bottom: calc(-870px - ((230px) * 3) - 170px - 40px);
         }
     
         .call-to-act-card {
@@ -479,7 +479,7 @@ section[class="call-to-act-sec"] {
         left: calc(50% - (75% / 2));
 
         /* negative height of the main section and some adustment */
-        bottom: -299vh;
+        bottom: calc(-1000px - ((300px) * 4) - 500px);
     }
 
     .call-to-act-card {
@@ -616,4 +616,89 @@ footer small {
     clear: both;
     display: block;
     margin-top: 200px;
+}
+
+@media (max-width: 540px) {
+footer {
+        width: 100%;
+        height: 1700px;
+        background-color: hsl(192, 100%, 9%);
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        padding: 70px;
+    }
+
+    footer a {
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    footer>.ft-intro,
+    footer>.ft-social {
+        width: 100%;
+        height: 45%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer>.ft-link-1,
+    footer>.ft-link-2 {
+        width: 100%;
+        height: 5%;
+        margin-top: 90px;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px;
+    }
+
+    footer > .ft-intro {
+        margin-top: 550px;
+    }
+    footer>.ft-intro div {
+        padding-top: 20px;
+    }
+
+    footer>.ft-intro div>img {
+        height: 20px;
+    }
+
+    footer>.ft-intro div>p {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+
+    footer>.ft-intro div>a {
+        padding-left: 20px;
+    }
+
+    footer>.ft-intro svg {
+        margin-bottom: 40px;
+    }
+
+    footer>.ft-social {
+        display: flex;
+        flex-direction: column;
+        margin-top: 200px;
+        margin-left: 50px;
+    }
+
+    footer>.ft-social i {
+        font-size: 10px;
+        font-weight: lighter;
+        border: 1px solid #ffffff;
+        border-radius: 50%;
+        padding: 8px 8px;
+        margin-left: 15px;
+    }
+
+    footer>.ft-social div:first-child i {
+        padding: 8px 10px;
+    }
+
+    footer small {
+        clear: both;
+        display: block;
+        margin-top: 200px;
+    }
 }
