--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ p, a, button, label, li, small {
 }
 header {
     width: 100%;
-    height: 120vh;
+    height: 1000px;
     background-image: url("images/bg-hero-desktop.svg");
     background-color: hsl(193, 100%, 96%);
     background-size: cover;
