--- a/style.css
+++ b/style.css
@@ -88,9 +88,10 @@ nav  >  ul a {
 }
 .header-img img {
     width: 85%;
+    height: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10%;
+    margin-top: calc(50% - 280px);
     padding-left: 30px;
 }
 
