--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ header {
     background-repeat: no-repeat;
     /* color: hsl(192, 100%, 9%); */
 }
+nav {
+    padding-bottom: 30px;
+}
 nav > img {
     width: 150px;
     margin: 60px 0 0 90px;
@@ -59,11 +62,11 @@ nav  >  ul a {
     /* max-height: 400px; */
     /* background-color: aqua; */
     margin-top: calc(25% - 200px);
-    padding: 40px 80px 60px 80px;
+    padding: 10px 80px 60px 80px;
 }
 .header-text h1 {
     line-height: 50px;
-    font-size: 2.3rem;
+    font-size: 2.1rem;
 }
 .header-text p {
     margin-top: 15px;
@@ -91,7 +94,7 @@ nav  >  ul a {
     /* height: 100%; */
     margin-left: auto;
     margin-right: auto;
-    margin-top: calc(50% - 280px);
+    margin-top: calc(50% - 300px);
     padding-left: 30px;
 }
 
@@ -123,6 +126,7 @@ nav  >  ul a {
     .header-img {
         margin-top: 240px;
     }
+    
 }
 
 
